styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-black/90 text-beige;
  font-family: "Orbitron", sans-serif;
}

html {
  scroll-behavior: smooth;
}

/* Custom Scrollbar */
::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: #d2b48c;
  border-radius: 8px;
}

::-webkit-scrollbar-track {
  background-color: gray;
}

